Refactor: espanol y errores
