# backend/src/main/java/com/uniquindio/backend/model/dto/request/LoginRequest.java
@@ -9,9 +9,9 @@ public class LoginRequest {
 
     @NotBlank(message = "El nombre de usuario es requerido")
     @Size(min = 3, max = 50, message = "El nombre de usuario debe tener entre 3 y 50 caracteres")
-    private String username;
+    private String nombreUsuario;
 
     @NotBlank(message = "La contraseña es requerida")
     @Size(min = 8, max = 100, message = "La contraseña debe tener entre 8 y 100 caracteres")
-    private String password;
+    private String contrasena;
 }
